fix android back button on LogOutFragment

--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -55,7 +55,7 @@
         <TextView
             android:id="@+id/titleText"
             android:layout_width="94dp"
-            android:layout_height="74dp"
+            android:layout_height="wrap_content"
             android:fontFamily="@font/quicksand_bold"
             android:text="@string/tittle"
             android:textAlignment="center"
